[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Acorn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pixelland.mp3" type="AudioStream" id=7]
[ext_resource path="res://Komiku_-_03_-_Mushrooms.mp3" type="AudioStream" id=8]
[ext_resource path="res://videogame-death-sound-43894.mp3" type="AudioStream" id=9]
[ext_resource path="res://DogWhimperWhineCry PE918602.mp3" type="AudioStream" id=10]

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob_scene = ExtResource( 2 )
bullet = ExtResource( 5 )
acorn_scene = ExtResource( 6 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.945098, 0.027451, 1 )

[node name="endOfMatchTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="MobTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="AcornTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -97, 81 )
scale = Vector2( 0.335786, 0.320327 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 2.622

[node name="mobdeathsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="endofroundmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 537, 472 )

[node name="enemySpawnPoint0" type="Position2D" parent="."]
position = Vector2( 1063, 17 )

[node name="enemySpawnPoint1" type="Position2D" parent="."]
position = Vector2( 14, 684 )

[node name="enemySpawnPoint2" type="Position2D" parent="."]
position = Vector2( 1063, 684 )

[node name="enemySpawnPoint3" type="Position2D" parent="."]
position = Vector2( 16, 19 )

[node name="asp1" type="Position2D" parent="."]
position = Vector2( 266, 165 )

[node name="asp2" type="Position2D" parent="."]
position = Vector2( 684, 404 )

[node name="asp3" type="Position2D" parent="."]
position = Vector2( -83, -88 )

[node name="asp4" type="Position2D" parent="."]
position = Vector2( 297, -90 )

[node name="asp5" type="Position2D" parent="."]
position = Vector2( -102, 325 )

[node name="spawn_marker0" type="Label" parent="."]
margin_left = -237.0
margin_top = 60.0
margin_right = -140.0
margin_bottom = 74.0
text = "spawn_location"

[node name="spawn_marker3" type="Label" parent="."]
margin_left = 1108.0
margin_top = 736.0
margin_right = 1205.0
margin_bottom = 750.0
text = "spawn_location"

[node name="spawn_marker2" type="Label" parent="."]
margin_left = -200.0
margin_top = 617.0
margin_right = -103.0
margin_bottom = 631.0
text = "spawn_location"

[node name="spawn_marker1" type="Label" parent="."]
margin_left = 1195.0
margin_top = 200.0
margin_right = 1292.0
margin_bottom = 214.0
text = "spawn_location"

[connection signal="timeout" from="endOfMatchTimer" to="." method="_on_endOfMatchTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="AcornTimer" to="." method="_on_AcornTimer_timeout"]
[connection signal="hit" from="Player" to="." method="take_damage"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="start_game_cheated" from="HUD" to="." method="new_game_cheated"]
